{
    "name": "playerControls",
    "maps": [
        {
            "name": "Generic",
            "id": "0860a52e-7aa9-4d03-8b33-87958fc7afbf",
            "actions": [
                {
                    "name": "move",
                    "type": "Value",
                    "id": "62c7c22a-5f0b-48c8-8c61-09d7c7bddd31",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "look",
                    "type": "Value",
                    "id": "6ff4aed2-981b-4069-92b1-5336c6abca4d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "jump",
                    "type": "Button",
                    "id": "480c8911-137b-4249-9400-2b006ce4e0c4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "fire",
                    "type": "Button",
                    "id": "974a683b-3c6d-4589-9b29-aa087ce69df0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "altfire",
                    "type": "Button",
                    "id": "a024048e-20de-49ba-b1b3-f530d436cd08",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "weapon1",
                    "type": "Button",
                    "id": "aa12c5b1-e5bb-4c7d-b09b-29a1f9d45722",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "weapon2",
                    "type": "Button",
                    "id": "00639259-4457-4dca-ab9f-25808bd1e57c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "weapon3",
                    "type": "Button",
                    "id": "a51eb913-b4f4-45d9-b980-c9fe451056ed",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "weapon4",
                    "type": "Button",
                    "id": "7c44230e-89e3-4686-9e40-5e0fb49f2f05",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "weapon5",
                    "type": "Button",
                    "id": "4a317d32-f45d-4281-b492-218e107a819e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "weapon6",
                    "type": "Button",
                    "id": "89d1355b-b6ef-4d97-8148-5ebbdb80baf4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "weapon7",
                    "type": "Button",
                    "id": "c0d31983-cb9c-4171-8e57-07c79417ded6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "c3bed3ea-860f-4d72-8547-89ff17a0db3c",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "bcac1c86-c47f-494c-a757-97e807d6549c",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "6451f21b-c4cf-4c33-9cc2-b28f3b2106fe",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "56f03bae-cb9e-4c9a-aec9-2009e215d6f8",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "cbd8e214-f2f8-4a7f-8288-eda76ac023c1",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "d28246e2-a937-470e-9560-5c14aee851ee",
                    "path": "<Pointer>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7c3d5b8c-4c45-40ac-86fe-e6c4f7c65052",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cd4c3644-c5f4-4684-b0d9-c44ea717aa0e",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "weapon1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a309cd23-49ce-4087-9f27-92f8fdd674e7",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "weapon2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eb62abc1-10df-4b2a-9e4a-2a9284eae4db",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "weapon3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d3a5d6e0-f0b3-4041-9fcf-15d000b50c2e",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "weapon4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ee56102e-88e0-4c80-9193-6559324abad3",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "weapon5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c6abeb30-407a-4698-b2f4-7b3e90f836dc",
                    "path": "<Keyboard>/6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "weapon6",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b559b32d-644c-4bee-a7b0-4ddc685085bb",
                    "path": "<Keyboard>/7",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "weapon7",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "47676cf8-373e-4383-9506-ef1c694d84c5",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "altfire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "62326e5f-ec56-42f6-9983-012e00f9cf2e",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}